--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -68,7 +68,7 @@
           <div class="d-flex align-items-center justify-content-start">
             <a href="" class="avatar"><img src="../assets/img/profile-default.png" class="rounded-circle" alt=""></a>
             <div class="aside-alert-link">
-              <a href="" data-bs-toggle="tooltip" title="Sign out"><i data-feather="log-out"></i></a>
+              <a href="../page-signin.html" data-bs-toggle="tooltip" title="Sign out"><i data-feather="log-out"></i></a>
             </div>
           </div>
           <div class="aside-loggedin-user">
@@ -80,26 +80,37 @@
           </div>
           <div class="collapse" id="loggedinMenu">
             <ul class="nav nav-aside mg-b-0">
-              <li class="nav-item"><a href="" class="nav-link"><i data-feather="user"></i> <span>View Profile</span></a></li>
-              <li class="nav-item"><a href="" class="nav-link"><i data-feather="info"></i> <span>Log Aktivitas</span></a></li>
-              <li class="nav-item"><a href="" class="nav-link"><i data-feather="edit"></i> <span>Ubah Password</span></a></li>
-              <li class="nav-item"><a href="" class="nav-link"><i data-feather="log-out"></i> <span>Sign Out</span></a></li>
+              <li class="nav-item"><a href="profile.html" class="nav-link"><i data-feather="user"></i> <span>View Profile</span></a></li>
+              <li class="nav-item"><a href="LogAktivitas.html" class="nav-link"><i data-feather="info"></i> <span>Log Aktivitas</span></a></li>
+              <li class="nav-item"><a href="UbahPassword.html" class="nav-link"><i data-feather="edit"></i> <span>Ubah Password</span></a></li>
+              <li class="nav-item"><a href="../page-signin.html" class="nav-link"><i data-feather="log-out"></i> <span>Sign Out</span></a></li>
             </ul>
           </div>
         </div>
         <ul class="nav nav-aside">
           <li class="nav-label">Dashboard</li>
-          <li class="nav-item active"><a href="dashboard-one.html" class="nav-link"><i data-feather="activity"></i> <span>Lap Utama Harian </span></a></li>
+          <li class="nav-item"><a href="dashboard-one.html" class="nav-link"><i data-feather="activity"></i> <span>Lap Utama Harian </span></a></li>
           <li class="nav-item"><a href="dashboard-two.html" class="nav-link"><i data-feather="bar-chart-2"></i> <span>Statistik Bulanan</span></a></li>
           <li class="nav-item"><a href="dashboard-three.html" class="nav-link"><i data-feather="pie-chart"></i> <span>Statistik Pegawai</span></a></li>
+          <!-- DATA MASTER KEPEGAWAIAN -->
           <li class="nav-label mg-t-25">Data Master Kepegawaian</li>
-          <li class="nav-item"><a href="app-calendar.html" class="nav-link"><i data-feather="calendar"></i> <span>Pegawai ASN</span></a></li>
-          <li class="nav-item"><a href="app-calendar.html" class="nav-link"><i data-feather="calendar"></i> <span>Pegawai Non ASN</span></a></li>
-          <li class="nav-item"><a href="app-chat.html" class="nav-link"><i data-feather="message-square"></i> <span>Struktur Organisasi</span></a></li>
-          <li class="nav-item"><a href="app-contacts.html" class="nav-link"><i data-feather="users"></i> <span>Unit Kerja</span></a></li>
-          <li class="nav-item"><a href="app-file-manager.html" class="nav-link"><i data-feather="file-text"></i> <span>Jenis Jabatan</span></a></li>
-          <li class="nav-item"><a href="app-mail.html" class="nav-link"><i data-feather="mail"></i> <span>Nama Jabatan</span></a></li>
-          <li class="nav-item"><a href="app-mail.html" class="nav-link"><i data-feather="mail"></i> <span>Tugas Tambahan</span></a></li>
+          <li class="nav-item active"><a href="data-pegawai.html" class="nav-link"><i data-feather="user-plus"></i> <span>Pegawai ASN</span></a></li>
+          <li class="nav-item"><a href="PegawaiNonAsn.html" class="nav-link"><i data-feather="user-minus"></i> <span>Pegawai Non ASN</span></a></li>
+          <li class="nav-item"><a href="StrukturOrganisasi.html" class="nav-link"><i data-feather="layout"></i> <span>Struktur Organisasi</span></a></li>
+          <li class="nav-item"><a href="SatuanOrgnisasi.html" class="nav-link"><i data-feather="layers"></i> <span>Satuan Organisasi</span></a></li>
+          <li class="nav-item"><a href="UnitKerja.html" class="nav-link"><i data-feather="file"></i> <span>Unit Kerja</span></a></li>
+          <li class="nav-item"><a href="JenisJabatan.html" class="nav-link"><i data-feather="file-text"></i> <span>Jenis Jabatan</span></a></li>
+          <li class="nav-item"><a href="NamaJabatan.html" class="nav-link"><i data-feather="clipboard"></i> <span>Nama Jabatan</span></a></li>
+          <li class="nav-item"><a href="TugasTambahan.html" class="nav-link"><i data-feather="file-plus"></i> <span>Tugas Tambahan</span></a></li>
+          <li class="nav-item"><a href="MutasiPegawai.html" class="nav-link"><i data-feather="list"></i> <span>Mutasi Pegawai</span></a></li>
+
+          <!-- Pengajuan Ketidakhadiran -->
+          <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
+          <li class="nav-item"><a href="PengajuanDinas.html" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas </span></a></li>
+          <li class="nav-item"><a href="PengajuanIzin.html" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin </span></a></li>
+          <li class="nav-item"><a href="PengajuanSakit.html" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a></li>
+          <li class="nav-item"><a href="PengajuanCuti.html" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a></li>
+
 
           <li class="nav-label mg-t-25">Pages</li>
           <li class="nav-item with-sub">
