--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -50,7 +50,7 @@
 
     <!-- DashForge CSS -->
     <link rel="stylesheet" href="../assets/css/dashforge.css">
-    <link rel="stylesheet" href="../assets/css/skin.gradient1.css">
+    <link rel="stylesheet" href="../assets/css/skin.deepblue.css">
 		<link rel="stylesheet" href="../assets/css/dashforge.demo.css">
   </head>
   <body>
@@ -107,6 +107,14 @@
           <!-- Pengajuan Ketidakhadiran -->
           <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
           <li class="nav-item"><a href="PengajuanDinas.html" class="nav-link"><i data-feather="map"></i> <span>Pengajuan Dinas </span></a></li>
+          <li class="nav-item"><a href="PengajuanIzin.html" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin </span></a></li>
+          <li class="nav-item"><a href="PengajuanSakit.html" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a></li>
+          <li class="nav-item"><a href="PengajuanCuti.html" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a></li>
+
+          
+          <!-- Monitoring Absensi -->
+          <li class="nav-label mg-t-25">Monitoring Absensi</li>
+          <li class="nav-item"><a href="PengajuanDinas.html" class="nav-link"><i data-feather="database"></i> <span>Mesin Absensi </span></a></li>
           <li class="nav-item"><a href="PengajuanIzin.html" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin </span></a></li>
           <li class="nav-item"><a href="PengajuanSakit.html" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a></li>
           <li class="nav-item"><a href="PengajuanCuti.html" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a></li>
