--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -57,7 +57,7 @@
 
     <aside class="aside aside-fixed">
       <div class="aside-header">
-        <a href="../index.html" class="aside-logo">dash<span>forge</span></a>
+        <a href="../index.html" class="aside-logo">K-<span>Mob</span></a>
         <a href="" class="aside-menu-link">
           <i data-feather="menu"></i>
           <i data-feather="x"></i>
@@ -103,6 +103,15 @@
           <li class="nav-item"><a href="NamaJabatan.html" class="nav-link"><i data-feather="clipboard"></i> <span>Nama Jabatan</span></a></li>
           <li class="nav-item"><a href="TugasTambahan.html" class="nav-link"><i data-feather="file-plus"></i> <span>Tugas Tambahan</span></a></li>
           <li class="nav-item"><a href="MutasiPegawai.html" class="nav-link"><i data-feather="list"></i> <span>Mutasi Pegawai</span></a></li>
+          
+          <!-- Master Absensi-->
+          <li class="nav-label mg-t-25">Master Absensi</li>
+          <li class="nav-item"><a href="TipeKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Tipe Kerja</span></a></li>
+          <li class="nav-item"><a href="WaktuKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Waktu Kerja</span></a></li>
+          <li class="nav-item"><a href="SkemaKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Skema Waktu Kerja</span></a></li>
+          <li class="nav-item"><a href="JenisCuti.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Cuti</span></a></li>
+          <li class="nav-item"><a href="JenisDinas.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Dinas</span></a></li>
+          <li class="nav-item"><a href="PemotonganAbsensi.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pemotongan Absensi</span></a></li>
 
           <!-- Pengajuan Ketidakhadiran -->
           <li class="nav-label mg-t-25">Pengajuan Ketidakhadiran</li>
@@ -114,31 +123,31 @@
           
           <!-- Monitoring Absensi -->
           <li class="nav-label mg-t-25">Monitoring Absensi</li>
-          <li class="nav-item"><a href="PengajuanDinas.html" class="nav-link"><i data-feather="database"></i> <span>Mesin Absensi </span></a></li>
-          <li class="nav-item"><a href="PengajuanIzin.html" class="nav-link"><i data-feather="alert-circle"></i> <span>Pengajuan Izin </span></a></li>
-          <li class="nav-item"><a href="PengajuanSakit.html" class="nav-link"><i data-feather="thermometer"></i> <span>Pengajuan Sakit</span></a></li>
-          <li class="nav-item"><a href="PengajuanCuti.html" class="nav-link"><i data-feather="calendar"></i> <span>Pengajuan Cuti</span></a></li>
-
-
-          <li class="nav-label mg-t-25">Pages</li>
+          <li class="nav-item"><a href="AgendaPegawai.html" class="nav-link"><i data-feather="archive"></i> <span>Agenda Pegawai</span></a></li>
           <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="user"></i> <span>User Pages</span></a>
+            <a href="" class="nav-link"><i data-feather="clock"></i> <span>Jadwal Pegawai</span></a>
             <ul>
-              <li><a href="page-profile-view.html">View Profile</a></li>
-              <li><a href="page-connections.html">Connections</a></li>
-              <li><a href="page-groups.html">Groups</a></li>
-              <li><a href="page-events.html">Events</a></li>
+              <li><a href="JadwalUtama.html">Jadwal Utama</a></li>
+              <li><a href="JadwalTambahan.html">Jadwal Tambahan</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a href="KeluarKantor.html" class="nav-link"><i data-feather="external-link"></i> <span>Keluar Kantor</span></a></li>
+          <li class="nav-item with-sub">
+            <a href="" class="nav-link"><i data-feather="database"></i> <span>Mesin Absensi</span></a>
+            <ul>
+              <li><a href="AbsensiMesinHarian.html">Absensi Mesin Harian</a></li>
+              <li><a href="AbsensiMesinPegawai.html">Absensi Mesin Pegawai</a></li>
             </ul>
           </li>
           <li class="nav-item with-sub">
-            <a href="" class="nav-link"><i data-feather="file"></i> <span>Other Pages</span></a>
+            <a href="" class="nav-link"><i data-feather="book"></i> <span>Laporan Presensi</span></a>
             <ul>
-              <li><a href="page-timeline.html">Timeline</a></li>
+              <li><a href="LaporanHarian.html">Laporan Harian</a></li>
+              <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
+              <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
+              <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
             </ul>
-          </li>
-          <li class="nav-label mg-t-25">User Interface</li>
-          <li class="nav-item"><a href="../components" class="nav-link"><i data-feather="layers"></i> <span>Components</span></a></li>
-          <li class="nav-item"><a href="../collections" class="nav-link"><i data-feather="box"></i> <span>Collections</span></a></li>
+          </li>          
         </ul>
       </div>
     </aside>
