--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -109,6 +109,7 @@
           <li class="nav-item"><a href="TipeKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Tipe Kerja</span></a></li>
           <li class="nav-item"><a href="WaktuKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Waktu Kerja</span></a></li>
           <li class="nav-item"><a href="SkemaKerja.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Skema Waktu Kerja</span></a></li>
+          <li class="nav-item"><a href="PegawaiAbsensiMobile.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pegawai Absensi Mobile</span></a></li>
           <li class="nav-item"><a href="JenisCuti.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Cuti</span></a></li>
           <li class="nav-item"><a href="JenisDinas.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Dinas</span></a></li>
           <li class="nav-item"><a href="PemotonganAbsensi.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pemotongan Absensi</span></a></li>
@@ -146,6 +147,7 @@
               <li><a href="LaporanBulanan.html">Laporan Bulanan</a></li>
               <li><a href="LaporanTahunan.html">Laporan Tahunan</a></li>
               <li><a href="LaporanBermasalah.html">Laporan Bermasalah</a></li>
+              <li><a href="LogAbsensiMobile.html">Log Absensi Mobile</a></li>
             </ul>
           </li>          
         </ul>
