--- a/administrator/data-pegawai.html
+++ b/administrator/data-pegawai.html
@@ -141,6 +141,13 @@
             </ul>
           </li>
           <li class="nav-item with-sub">
+            <a href="" class="nav-link"><i data-feather="smartphone"></i> <span>Absensi Mobile</span></a>
+            <ul>
+              <li><a href="AbsensiMobileHarian.html">Absensi Mobile Harian</a></li>
+              <li><a href="AbsensiMobilePegawai.html">Absensi Mobile Pegawai</a></li>
+            </ul>
+          </li>
+          <li class="nav-item with-sub">
             <a href="" class="nav-link"><i data-feather="book"></i> <span>Laporan Presensi</span></a>
             <ul>
               <li><a href="LaporanHarian.html">Laporan Harian</a></li>
@@ -536,7 +543,10 @@
                   <tbody>
                     <tr>
                       <td>196708142001121002</td>
-                      <td>Abdul Gani</td>
+                      <td>
+                        <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
+                        <p class="tx-12 mg-b-10">Pengadministrasi Persuratan</p>
+                      </td>
                       <td>Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</td>
                       <td>Sub Bagian Umum dan Kepegawaian</td>
                       <td>Aktif</td>
@@ -549,7 +559,10 @@
                     </tr>
                     <tr>
                       <td>196704221989032002</td>
-                      <td>Rosnaini</td>
+                      <td>
+                        <h6 class="tx-13 mg-b-2 tx-primary">Rosnaini, S.Sos., M.Si.</h6>
+                        <p class="tx-12 mg-b-10">Kepala Sub Bidang Penilaian Dan Evaluasi Kinerja Aparatur I</p>
+                      </td>
                       <td>Badan Kepegawaian dan Pengembangan Sumber Daya Manusia</td>
                       <td>Sub Bidang Penilaian dan Evaluasi Kinerja Aparatur I</td>
                       <td>Aktif</td>
