--- a/administrator/AbsensiMesinHarian.html
+++ b/administrator/AbsensiMesinHarian.html
@@ -215,7 +215,8 @@
                   <thead class="thead-primary">
                     <tr>
                       <th>No.</th>
-                      <th>NIP</th>
+                      <th>NIP Pegawai</th>
+                      <th>Nama Lengkap</th>
                       <th>Waktu Datang</th>
                       <th>Waktu Pulang</th>
                       <th>Device</th>
@@ -226,19 +227,20 @@
                   <tbody>
                     <tr>
                         <td>1</td>
+                        <td>196708142001121002</td>
                         <td>
-                            <h6 class="tx-13 mg-b-2 tx-primary">196708142001121002</h6>
-                            <p class="tx-12 mg-b-10">Katherine Lumaad</p>               
-                         </td>
-                         <td>02/01/23 07:04:50</td>
-                        <td>02/01/23 16:04:50</td>
+                          <h6 class="tx-13 mg-b-2 tx-primary">Katherine Lumaad</h6>
+                          <p class="tx-12 mg-b-10">Pengadministrasi Persuratan</p>
+                        </td>
+                        <td>02/01/2023 07:04:50</td>
+                        <td>02/01/2023 16:04:50</td>
                         <td>
-                            <h6 class="tx-13 mg-b-2 tx-dark">CQLN230660015(a SETDA FaceID Umum)</h6>
+                            <h6 class="tx-13 mg-b-2 tx-dark tx-medium">CQLN230660015(a SETDA FaceID Umum)</h6>
                             <p class="tx-12 mg-b-10">Fingerprint</p>      
                         </td>
                         <td>
                             <a href="http://103.165.236.206:8081/iclock/file/upload/thumbnail/CQLN230660017/2025/0321/164256_198202122001121004.jpg" target="_blank" class="wd-100 wd-md-50 wd-lg-100 ht-60 ht-md-40 ht-lg-60">
-                                <img src="http://103.165.236.206:8081/iclock/file/upload/thumbnail/CQLN230660017/2025/0321/164256_198202122001121004.jpg" class="img-fit-cover" alt="">
+                              <img src="http://103.165.236.206:8081/iclock/file/upload/thumbnail/CQLN230660017/2025/0321/164256_198202122001121004.jpg" class="img-fit-cover" alt="">
                             </a>
                         </td>
                         <td>Mesin</td>
