--- a/administrator/AbsensiMesinPegawaiDetails.html
+++ b/administrator/AbsensiMesinPegawaiDetails.html
@@ -131,7 +131,7 @@
                         <a href="TugasTambahan.html" class="nav-link"><i data-feather="file-plus"></i> <span>Tugas Tambahan</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="MutasiPegawai.html" class="nav-link"><i data-feather="list"></i> <span>Mutasi Pegawai</span></a>
+                        <a href="MutasiPegawai.html" class="nav-link"><i data-feather="repeat"></i> <span>Mutasi Pegawai</span></a>
                     </li>
 
                     <!-- Master Absensi-->
@@ -148,11 +148,11 @@
                     <li class="nav-item">
                         <a href="PegawaiAbsensiMobile.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pegawai Absensi Mobile</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="JenisCuti.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Cuti</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="JenisDinas.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Dinas</span></a>
+                        <a href="JenisKetidakhadiran.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Ketidakhadiran</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="PemotonganAbsensi.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pemotongan Absensi</span></a>
