--- a/administrator/TipeKerja.html
+++ b/administrator/TipeKerja.html
@@ -152,7 +152,7 @@
                         <a href="JenisCuti.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Cuti</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="JenisDinas.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Dinas</span></a>
+                        <a href="JenisKetidakhadiran.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Jenis Ketidakhadiran</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="PemotonganAbsensi.html" class="nav-link"><i data-feather="stop-circle"></i> <span>Pemotongan Absensi</span></a>
@@ -298,7 +298,7 @@
                                     <tbody>
                                         <tr>
                                             <td>Dinas</td>
-                                            <td>Dinas</td>
+                                            <td>Dinas Kantor</td>
                                             <td>Ya</td>
                                             <td>
                                                 <button type="button" class="btn btn-outline-primary btn-icon mg-b-4" data-bs-toggle="modal" data-bs-target="#ModalTambah"><i data-feather="edit"></i></button>
